@@ -18,6 +18,7 @@ import DisputeStatusChip from 'components/dispute-status-chip';
 import ClickableCell from 'components/clickable-cell';
 import DetailsLink, { getDetailsURL } from 'components/details-link';
 import Page from 'components/page';
+import { TestModeNotice, topics } from 'components/test-mode-notice';
 import { reasons } from './strings';
 import { formatStringValue } from 'utils';
 import { formatCurrency } from 'utils/currency';
@@ -172,6 +173,7 @@ export const DisputesList = () => {
 
 	return (
 		<Page>
+			<TestModeNotice topic={ topics.disputes } />
 			<TableCard
 				title={ __( 'Disputes', 'woocommerce-payments' ) }
 				isLoading={ isLoading }
