@@ -4,6 +4,7 @@
 * Add - New setting to manage whether to enable saving cards during checkout. (Defaults to being enabled).
 * Fix - Fixed issue where an empty alert would appear when trying to refund an authorization charge.
 * Update - Link customer name on transaction detail page to filtered transaction list page.
+* Update - Test mode notice width is now consistent across all pages.
 
 = 1.8.0 - 2020-12-16 =
 * Add - Include information about failing payment into order notes.
